--- a/src/app/components/slot/add.slot.html
+++ b/src/app/components/slot/add.slot.html
@@ -31,11 +31,11 @@
                                         </div>
                                         <div class="form-group">
                                             <label for="firstname">Start Time</label>
-                                            <input class="form-control" type="time" atp-time-picker value="20:55" />
+                                            <input class="form-control" type="time" atp-time-picker value="20:55 AM" [(ngModel)]="starttime" name="starttime" />
                                         </div>
                                         <div class="form-group">
                                             <label for="firstname">End Time</label>
-                                            <input class="form-control" type="time" atp-time-picker value="20:55" />
+                                            <input class="form-control" type="time" atp-time-picker value="20:55 PM" [(ngModel)]="endtime" name="endtime" />
                                         </div>
                                         <br>
                                         <button type="submit" *ngIf="!deliveryId" class="btn btn-primary vendor-button" (click)="addSlot()">
